Sat Feb 22 18:10:14 GMT 2003  Morten Brix Pedersen  <morten@wtf.dk>

	* po/da.po: Translate a few more strings.

Sat Feb 22 18:06:09 GMT 2003  Alexandre Folle de Menezes  <afmenez@terra.com.br>

	* po/pt_BR.po: Update from Translation Project.

Sat Feb 22 17:50:55 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in: Fix typo ("developement" -> "development").
	* src/manp.c (add_to_dirlist): Fix typo ("mach" -> "match").

Sat Feb 22 17:41:07 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (read_config_file): If user_config_file is non-NULL,
	  use it instead of ~/.manpath. Programs can now set the user
	  configuration file to be used.

	* src/catman.c, src/mandb.c, src/manpath.c, src/whatis.c
	  (long_options): Add -C/--config-file option.
	  (usage): Document it.
	  (main): Handle it.
	* src/man.c (long_options): Add -C/--config-file option.
	  (usage): Document it, along with adding -i and -I to the synopsis.
	  (man_getopt): Handle it.
	* man/man1/apropos.man1, man/man1/man.man1, man/man1/manpath.man1,
	  man/man1/whatis.man1, man/man8/catman.man8, man/man8/mandb.man8
	  (SYNOPSIS): Add -C.
	  (OPTIONS): Describe -C/--config-file.

	* docs/NEWS: Document this addition.

Fri Feb 21 18:32:21 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.in (man): lexgrog.o is no longer needed. Removing it
	  takes 24K off the size of a stripped man binary on Linux/i386.

Fri Feb 21 18:12:45 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Improve error handling.
	  (mandb): Since xcopy() now returns int, handle its return value.

Fri Feb 21 16:40:26 GMT 2003  Colin Watson  <cjwatson@debian.org>

	* src/man.c (find_in_path): New function to look for executables on
	  the $PATH.
	  (gripe_no_man): Only emit the "undocumented" message if a
	  corresponding executable is found on the $PATH.
	* docs/NEWS: Document this.

Fri Feb 21 16:26:00 GMT 2003  Colin Watson  <cjwatson@debian.org>
