@@ -1,3 +1,8 @@
+Sat Feb 22 18:32:58 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* acinclude.m4 (MAN_CHECK_BDB): Remove some extra calls to
+	  AC_MSG_RESULT, since AC_CACHE_CHECK already calls that.
+
 Sat Feb 22 18:10:14 GMT 2003  Morten Brix Pedersen  <morten@wtf.dk>
 
 	* po/da.po: Translate a few more strings.
